style matched through potential impact, mobile

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -49,19 +49,19 @@
                         <div class='logo-container flex-row-aligned'>
                             <img src='./assets/transunion.svg'></img>
                         </div>
-                        <div class='score border-top'>673</div>
+                        <div class='cs-score border-top'>673</div>
                     </div>
                     <div class='flex-grow-1 flex-centered'>
                         <div class='logo-container flex-row-aligned'>
                             <img src='./assets/Equifax.svg'></img>
                         </div>
-                        <div class='score border-top'>673</div>
+                        <div class='cs-score border-top'>673</div>
                     </div>
                     <div class='flex-grow-1 flex-centered'>
                         <div class='logo-container flex-row-aligned'>
                             <img src='./assets/experian_logo.svg'></img>
                         </div>
-                        <div class='score border-top'>673</div>
+                        <div class='cs-score border-top'>673</div>
                     </div>
                 </div>
             </div>
@@ -89,25 +89,25 @@
                 <section id='potential-impact'>
                     <h3 class='section-title'>Potential Impact</h3>
                     <div id='pi-inner-container'>
-                            <div class='flex-row flex-grow-1'>
-                                <div class='score'>679</div>
-                                <div class='flex-centered-align-center points'>           
+                            <div class='flex-row'>
+                                <div class='pi-score'>679</div>
+                                <div class='pi-change-indic'>           
                                     <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
-                                    <p class='potential-points'>11</p>
+                                    <div class='potential-points'>11</div>
                                 </div>
                             </div>
-                            <div class='flex-row flex-grow-1 border'>
-                                <div class='score'>679</div>
-                                <div class='flex-centered-align-center points'>           
+                            <div class='flex-row'>
+                                <div class='pi-score'>679</div>
+                                <div class='pi-change-indic'>           
                                     <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
-                                    <p class='potential-points'>11</p>
+                                    <div class='potential-points'>11</div>
                                 </div>
                             </div>
-                            <div class='flex-row flex-grow-1'>
-                                <div class='score'>679</div>
-                                <div class='flex-centered-align-center points'>           
+                            <div class='flex-row'>
+                                <div class='pi-score'>679</div>
+                                <div class='pi-change-indic'>           
                                     <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
-                                    <p class='potential-points'>11</p>
+                                    <div class='potential-points'>11</div>
                                 </div>
                             </div>
                             <div class='pi-bureau-name'>TransUnion</div>
