--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -43,7 +43,7 @@
             
             <!-- CREDIT SCORES -->
             <div id='credit-scores'>
-                <h3 class='section-title'>Credit Scores</h3>
+                <h3 class='section-title cs-title'>Credit Scores</h3>
                 <div id='cs-grid'>
                     <div class='flex-grow-1 flex-centered'>
                         <div class='logo-container flex-row-aligned'>
@@ -68,7 +68,7 @@
 
             <!-- TARGET SCORE FORM -->
             <div id='target-score'>
-                <h3 class='section-title'>Target Score</h3>
+                <h3 class='section-title ts-title'>Target Score</h3>
                 <form id='target-score-form'>
                     <input id='score-input-field' type='text' maxlength='3' value='670'/>
                     <input id='score-slider' type='range' min='1' max='100' value='60' />
@@ -87,7 +87,7 @@
             <section id='ra-container'>
                 <!-- POTENTIAL IMPACT -->
                 <section id='potential-impact'>
-                    <h3 class='section-title'>Potential Impact</h3>
+                    <h3 class='section-title pi-title'>Potential Impact</h3>
                     <div id='pi-inner-container'>
                             <div class='flex-row'>
                                 <div class='pi-score'>679</div>
@@ -118,8 +118,8 @@
 
                 <!-- RECOMMENDED ACTIONS HEADER -->
                 <section id='ra-header'>
-                    <h3 class='section-title'>Recommended Actions</h3>
-                    <p>These recommendations are only estimates. They do not take into consideration future factors like balance changes and late payments.</p>
+                    <h3 class='section-title ra-title'>Recommended Actions</h3>
+                    <p class='ra-desc'>These recommendations are only estimates. They do not take into consideration future factors like balance changes and late payments.</p>
                 </section>
 
                 <!-- ACTIONS -->
@@ -141,7 +141,7 @@
                     <!-- PAYMENTS CONTAINER -->
                     <div class='payment-container'>
                         <!-- group as class='pc-subcontainer'-->
-                        <div class='pc-subcontainer'>
+                        <div class='pc-subcontainer-1'>
                             <div class='payment-type pc-padding'>
                                 <img src='./assets/alerts-icon.png' width='27px' height='27px' />
                                 <h4 class='payment-title'>Make an On-time Payment</h4>
@@ -152,8 +152,8 @@
                             </div>
                         </div>
                         <!-- group -->
-                        <div class='pc-subcontainer-3'>
-                            <div class='bureau-1 bureau pc-padding'>
+                        <div class='pc-subcontainer-2'>
+                            <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>TransUnion</div>
                                 <div class='flex-row'>
                                     <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
@@ -161,7 +161,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau-2 bureau pc-padding'>
+                            <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Equifax</div>
                                 <div class='flex-row'>
                                     <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
@@ -169,7 +169,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau-3 bureau pc-padding'>
+                            <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Experian</div>
                                 <div class='flex-row'>
                                     <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
@@ -177,14 +177,57 @@
                                 </div>
                             </div> 
                         </div>
-                        <!-- end subcontainer 3 -->
+                        <!-- end subcontainer 2 -->
+                    </div> 
+                    <!-- end payment-container -->
+                    
+                    <!-- PAYMENTS CONTAINER -->
+                    <div class='payment-container'>
+                        <!-- group as class='pc-subcontainer'-->
+                        <div class='pc-subcontainer-1'>
+                            <div class='payment-type pc-padding'>
+                                <img src='./assets/alerts-icon.png' width='27px' height='27px' />
+                                <h4 class='payment-title'>Make an On-time Payment</h4>
+                            </div>
+                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div>
+                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                            </div>
+                        </div>
+                        <!-- group -->
+                        <div class='pc-subcontainer-2'>
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>TransUnion</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>Equifax</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>2 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>Experian</div>
+                                <div class='flex-row'>
+                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <!-- end subcontainer 2 -->
                     </div> 
                     <!-- end payment-container -->
 
                     <!-- PAYMENTS CONTAINER -->
                     <div class='payment-container'>
                         <!-- group as class='pc-subcontainer'-->
-                        <div class='pc-subcontainer'>
+                        <div class='pc-subcontainer-1'>
                             <div class='payment-type pc-padding'>
                                 <img src='./assets/alerts-icon.png' width='27px' height='27px' />
                                 <h4 class='payment-title'>Make an On-time Payment</h4>
@@ -195,8 +238,8 @@
                             </div>
                         </div>
                         <!-- group -->
-                        <div class='pc-subcontainer-3'>
-                            <div class='bureau-1 bureau pc-padding'>
+                        <div class='pc-subcontainer-2'>
+                            <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>TransUnion</div>
                                 <div class='flex-row'>
                                     <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
@@ -204,7 +247,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau-2 bureau pc-padding'>
+                            <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Equifax</div>
                                 <div class='flex-row'>
                                     <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
@@ -212,7 +255,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau-3 bureau pc-padding'>
+                            <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Experian</div>
                                 <div class='flex-row'>
                                     <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
@@ -220,14 +263,14 @@
                                 </div>
                             </div> 
                         </div>
-                        <!-- end subcontainer 3 -->
+                        <!-- end subcontainer 2 -->
                     </div> 
                     <!-- end payment-container -->
 
                     <!-- PAYMENTS CONTAINER -->
                     <div class='payment-container'>
                         <!-- group as class='pc-subcontainer'-->
-                        <div class='pc-subcontainer'>
+                        <div class='pc-subcontainer-1'>
                             <div class='payment-type pc-padding'>
                                 <img src='./assets/alerts-icon.png' width='27px' height='27px' />
                                 <h4 class='payment-title'>Make an On-time Payment</h4>
@@ -238,8 +281,8 @@
                             </div>
                         </div>
                         <!-- group -->
-                        <div class='pc-subcontainer-3'>
-                            <div class='bureau-1 bureau pc-padding'>
+                        <div class='pc-subcontainer-2'>
+                            <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>TransUnion</div>
                                 <div class='flex-row'>
                                     <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
@@ -247,7 +290,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau-2 bureau pc-padding'>
+                            <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Equifax</div>
                                 <div class='flex-row'>
                                     <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
@@ -255,7 +298,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau-3 bureau pc-padding'>
+                            <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Experian</div>
                                 <div class='flex-row'>
                                     <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
@@ -263,50 +306,7 @@
                                 </div>
                             </div> 
                         </div>
-                        <!-- end subcontainer 3 -->
-                    </div> 
-                    <!-- end payment-container -->
-
-                    <!-- PAYMENTS CONTAINER -->
-                    <div class='payment-container bottom-payment-container'>
-                        <!-- group as class='pc-subcontainer'-->
-                        <div class='pc-subcontainer'>
-                            <div class='payment-type pc-padding'>
-                                <img src='./assets/alerts-icon.png' width='27px' height='27px' />
-                                <h4 class='payment-title'>Make an On-time Payment</h4>
-                            </div>
-                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
-                            <div>
-                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
-                            </div>
-                        </div>
-                        <!-- group -->
-                        <div class='pc-subcontainer-3'>
-                            <div class='bureau-1 bureau pc-padding'>
-                                <div class='payments-bureau-name'>TransUnion</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div>
-
-                            <div class='bureau-2 bureau pc-padding'>
-                                <div class='payments-bureau-name'>Equifax</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>2 pts</div>
-                                </div>
-                            </div>
-
-                            <div class='bureau-3 bureau pc-padding'>
-                                <div class='payments-bureau-name'>Experian</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div> 
-                        </div>
-                        <!-- end subcontainer 3 -->
+                        <!-- end subcontainer 2 -->
                     </div> 
                     <!-- end payment-container -->
 
