correct stylings for mobile complete

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -321,9 +321,7 @@
                 <div class='footer-disclaimer'>
                     <p><span style='font-weight: 500'>Important: </span>Based on taking these actions, the best day to check for score increases is the 28th of the month. Allow up to three months to achieve full results.<br />These recommendations are only estimates.  They do not take into consideration future factors like balance changes and late payments.</p>
                 </div>
-                <div class='footer-score'>
-                    <p>Vantage Score 3.0</p>
-                </div>
+                <div class='footer-score'>Vantage Score 3.0</div>
             </footer>
             
         </div> 
