styled fontsize and margins up to ra-container

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -47,19 +47,19 @@
                 <div id='cs-grid'>
                     <div class='flex-grow-1 flex-centered'>
                         <div class='logo-container flex-row-aligned'>
-                            <img src='./assets/transunion.svg'></img>
+                            <img id='logo-1' src='./assets/transunion.svg'></img>
                         </div>
                         <div class='cs-score border-top'>673</div>
                     </div>
                     <div class='flex-grow-1 flex-centered'>
                         <div class='logo-container flex-row-aligned'>
-                            <img src='./assets/Equifax.svg'></img>
+                            <img id='logo-2' src='./assets/Equifax.svg'></img>
                         </div>
                         <div class='cs-score border-top'>673</div>
                     </div>
                     <div class='flex-grow-1 flex-centered'>
                         <div class='logo-container flex-row-aligned'>
-                            <img src='./assets/experian_logo.svg'></img>
+                            <img id='logo-3' src='./assets/experian_logo.svg'></img>
                         </div>
                         <div class='cs-score border-top'>673</div>
                     </div>
