edited styles/margins/fonts through up to potential impact triangle icon

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -9,7 +9,7 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700;800&display=swap" rel="stylesheet">
     <!-- title -->
     <title>Andrew Rusli html-css-test 1</title>
 </head>
@@ -89,21 +89,21 @@
                 <section id='potential-impact'>
                     <h3 class='section-title pi-title'>Potential Impact</h3>
                     <div id='pi-inner-container'>
-                            <div class='flex-row'>
+                            <div class='pi-unit'>
                                 <div class='pi-score'>679</div>
                                 <div class='pi-change-indic'>           
                                     <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
                                     <div class='potential-points'>11</div>
                                 </div>
                             </div>
-                            <div class='flex-row'>
+                            <div class='pi-unit'>
                                 <div class='pi-score'>679</div>
                                 <div class='pi-change-indic'>           
                                     <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
                                     <div class='potential-points'>11</div>
                                 </div>
                             </div>
-                            <div class='flex-row'>
+                            <div class='pi-unit'>
                                 <div class='pi-score'>679</div>
                                 <div class='pi-change-indic'>           
                                     <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
