styled fontsize/margins/tricons through potential impact

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -92,21 +92,21 @@
                             <div class='pi-unit'>
                                 <div class='pi-score'>679</div>
                                 <div class='pi-change-indic'>           
-                                    <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
+                                    <img class='pi-tricon' src='./assets/triangle-copy-7.svg' />
                                     <div class='potential-points'>11</div>
                                 </div>
                             </div>
                             <div class='pi-unit'>
                                 <div class='pi-score'>679</div>
                                 <div class='pi-change-indic'>           
-                                    <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
+                                    <img class='pi-tricon' src='./assets/triangle-copy-7.svg' />
                                     <div class='potential-points'>11</div>
                                 </div>
                             </div>
                             <div class='pi-unit'>
                                 <div class='pi-score'>679</div>
                                 <div class='pi-change-indic'>           
-                                    <img src='./assets/triangle-copy-7.svg' width='12px' height='9px' />
+                                    <img class='pi-tricon' src='./assets/triangle-copy-7.svg' />
                                     <div class='potential-points'>11</div>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                             <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>TransUnion</div>
                                 <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
                                     <div class='points'>3 pts</div>
                                 </div>
                             </div>
@@ -164,7 +164,7 @@
                             <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Equifax</div>
                                 <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
                                     <div class='points'>2 pts</div>
                                 </div>
                             </div>
@@ -172,7 +172,7 @@
                             <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Experian</div>
                                 <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
                                     <div class='points'>3 pts</div>
                                 </div>
                             </div> 
@@ -181,134 +181,6 @@
                     </div> 
                     <!-- end payment-container -->
                     
-                    <!-- PAYMENTS CONTAINER -->
-                    <div class='payment-container'>
-                        <!-- group as class='pc-subcontainer'-->
-                        <div class='pc-subcontainer-1'>
-                            <div class='payment-type pc-padding'>
-                                <img src='./assets/alerts-icon.png' width='27px' height='27px' />
-                                <h4 class='payment-title'>Make an On-time Payment</h4>
-                            </div>
-                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
-                            <div>
-                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
-                            </div>
-                        </div>
-                        <!-- group -->
-                        <div class='pc-subcontainer-2'>
-                            <div class='bureau pc-padding'>
-                                <div class='payments-bureau-name'>TransUnion</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div>
-
-                            <div class='bureau pc-padding'>
-                                <div class='payments-bureau-name'>Equifax</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>2 pts</div>
-                                </div>
-                            </div>
-
-                            <div class='bureau pc-padding'>
-                                <div class='payments-bureau-name'>Experian</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div> 
-                        </div>
-                        <!-- end subcontainer 2 -->
-                    </div> 
-                    <!-- end payment-container -->
-
-                    <!-- PAYMENTS CONTAINER -->
-                    <div class='payment-container'>
-                        <!-- group as class='pc-subcontainer'-->
-                        <div class='pc-subcontainer-1'>
-                            <div class='payment-type pc-padding'>
-                                <img src='./assets/alerts-icon.png' width='27px' height='27px' />
-                                <h4 class='payment-title'>Make an On-time Payment</h4>
-                            </div>
-                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
-                            <div>
-                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
-                            </div>
-                        </div>
-                        <!-- group -->
-                        <div class='pc-subcontainer-2'>
-                            <div class='bureau pc-padding'>
-                                <div class='payments-bureau-name'>TransUnion</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div>
-
-                            <div class='bureau pc-padding'>
-                                <div class='payments-bureau-name'>Equifax</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>2 pts</div>
-                                </div>
-                            </div>
-
-                            <div class='bureau pc-padding'>
-                                <div class='payments-bureau-name'>Experian</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div> 
-                        </div>
-                        <!-- end subcontainer 2 -->
-                    </div> 
-                    <!-- end payment-container -->
-
-                    <!-- PAYMENTS CONTAINER -->
-                    <div class='payment-container'>
-                        <!-- group as class='pc-subcontainer'-->
-                        <div class='pc-subcontainer-1'>
-                            <div class='payment-type pc-padding'>
-                                <img src='./assets/alerts-icon.png' width='27px' height='27px' />
-                                <h4 class='payment-title'>Make an On-time Payment</h4>
-                            </div>
-                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
-                            <div>
-                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
-                            </div>
-                        </div>
-                        <!-- group -->
-                        <div class='pc-subcontainer-2'>
-                            <div class='bureau pc-padding'>
-                                <div class='payments-bureau-name'>TransUnion</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div>
-
-                            <div class='bureau pc-padding'>
-                                <div class='payments-bureau-name'>Equifax</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>2 pts</div>
-                                </div>
-                            </div>
-
-                            <div class='bureau pc-padding'>
-                                <div class='payments-bureau-name'>Experian</div>
-                                <div class='flex-row'>
-                                    <img src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
-                                    <div class='points'>3 pts</div>
-                                </div>
-                            </div> 
-                        </div>
-                        <!-- end subcontainer 2 -->
-                    </div> 
-                    <!-- end payment-container -->
 
 
                 </section> 
