finished styling through footer, need to handle the 4 different payment-containers and icons.

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -128,14 +128,14 @@
                     <div id='menu-2'>
                         <!-- group as class='menu-2-subcontainer' -->
                         <div id='menu-2-subcontainer-1'>
-                            <h5 class='flex-grow-1'>Action</h5>
-                            <h5 class='flex-grow-1'>Account</h5>
+                            <h5 class='m2-sc1-item flex-grow-1'>Action</h5>
+                            <h5 class='m2-sc1-item flex-grow-1'>Account</h5>
                         </div>
                         <!-- group -->
                         <div id='menu-2-subcontainer-2'>
-                            <h5 class='flex-grow-1'>TransUnion</h5>
-                            <h5 class='flex-grow-1'>Equifax</h5>
-                            <h5 class='flex-grow-1'>Experian</h5>
+                            <h5 class='m2-sc2-item flex-grow-1'>TransUnion</h5>
+                            <h5 class='m2-sc2-item flex-grow-1'>Equifax</h5>
+                            <h5 class='m2-sc2-item flex-grow-1'>Experian</h5>
                         </div>
                     </div>
                     <!-- PAYMENTS CONTAINER -->
@@ -156,7 +156,7 @@
                             <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>TransUnion</div>
                                 <div class='flex-row'>
-                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' width='14px' height='11.2px' />
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' />
                                     <div class='points'>3 pts</div>
                                 </div>
                             </div>
@@ -164,7 +164,7 @@
                             <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Equifax</div>
                                 <div class='flex-row'>
-                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
                                     <div class='points'>2 pts</div>
                                 </div>
                             </div>
@@ -172,7 +172,7 @@
                             <div class='bureau pc-padding'>
                                 <div class='payments-bureau-name'>Experian</div>
                                 <div class='flex-row'>
-                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' width='14px' height='11.2px'  />
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
                                     <div class='points'>3 pts</div>
                                 </div>
                             </div> 
