finished stylings, except for footer bottom margin/overflow

--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -143,8 +143,8 @@
                         <!-- group as class='pc-subcontainer'-->
                         <div class='pc-subcontainer-1'>
                             <div class='payment-type pc-padding'>
-                                <img src='./assets/alerts-icon.png' width='27px' height='27px' />
-                                <h4 class='payment-title'>Make an On-time Payment</h4>
+                                <img class='card-icon' src='./assets/alerts-icon.png' />
+                                <a class='payment-title'>Make an On-time Payment</a>
                             </div>
                             <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
                             <div>
@@ -174,6 +174,135 @@
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
                                     <div class='points'>3 pts</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <!-- end subcontainer 2 -->
+                    </div> 
+                    <!-- end payment-container -->
+
+                    <!-- PAYMENTS CONTAINER -->
+                    <div class='payment-container'>
+                        <!-- group as class='pc-subcontainer'-->
+                        <div class='pc-subcontainer-1'>
+                            <div class='payment-type pc-padding'>
+                                <img class='card-icon' src='./assets/alerts-icon.png' />
+                                <a class='payment-title'>Make an On-time Payment</a>
+                            </div>
+                            <div class='account pc-padding'>JPMCB CARD #736 4625 ****</div>
+                            <div>
+                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                            </div>
+                        </div>
+                        <!-- group -->
+                        <div class='pc-subcontainer-2'>
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>TransUnion</div>
+                                <div class='flex-row'>
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>Equifax</div>
+                                <div class='flex-row'>
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>Experian</div>
+                                <div class='flex-row'>
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
+                                    <div class='points'>2 pts</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <!-- end subcontainer 2 -->
+                    </div> 
+                    <!-- end payment-container -->
+
+                    <!-- PAYMENTS CONTAINER -->
+                    <div class='payment-container'>
+                        <!-- group as class='pc-subcontainer'-->
+                        <div class='pc-subcontainer-1'>
+                            <div class='payment-type pc-padding'>
+                                <img class='gauge-icon' src='./assets/simulator-icon.svg' />
+                                <a class='payment-title'>Increase Credit Limit</a>
+                            </div>
+                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div>
+                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                            </div>
+                        </div>
+                        <!-- group -->
+                        <div class='pc-subcontainer-2'>
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>TransUnion</div>
+                                <div class='flex-row'>
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>Equifax</div>
+                                <div class='flex-row'>
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>Experian</div>
+                                <div class='flex-row'>
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
+                                    <div class='points'>3 pts</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <!-- end subcontainer 2 -->
+                    </div> 
+                    <!-- end payment-container -->
+
+                    <!-- PAYMENTS CONTAINER -->
+                    <div class='payment-container bottom-payment-container'>
+                        <!-- group as class='pc-subcontainer'-->
+                        <div class='pc-subcontainer-1'>
+                            <div class='payment-type pc-padding'>
+                                <img class='cash-icon' src='./assets/cashicon.svg' />
+                                <a class='payment-title'>Pay down debt</a>
+                            </div>
+                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div>
+                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                            </div>
+                        </div>
+                        <!-- group -->
+                        <div class='pc-subcontainer-2'>
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>TransUnion</div>
+                                <div class='flex-row'>
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg' />
+                                    <div class='points'>2 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>Equifax</div>
+                                <div class='flex-row'>
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
+                                    <div class='points'>2 pts</div>
+                                </div>
+                            </div>
+
+                            <div class='bureau pc-padding'>
+                                <div class='payments-bureau-name'>Experian</div>
+                                <div class='flex-row'>
+                                    <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
+                                    <div class='points'>2 pts</div>
                                 </div>
                             </div> 
                         </div>
