--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -318,7 +318,7 @@
             <!-- end RECOMMENED ACTIONS Section -->
 
             <!-- FOOTER -->
-            <footer id='footer'>
+            <footer id='footer' class='border'>
                 <div class='footer-disclaimer'>
                     <p><span style='font-weight: 500'>Important: </span>Based on taking these actions, the best day to check for score increases is the 28th of the month. Allow up to three months to achieve full results.<br />These recommendations are only estimates.  They do not take into consideration future factors like balance changes and late payments.</p>
                 </div>
