--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="main.css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -318,7 +318,7 @@
             <!-- end RECOMMENED ACTIONS Section -->
 
             <!-- FOOTER -->
-            <footer id='footer' class='border'>
+            <footer id='footer'>
                 <div class='footer-disclaimer'>
                     <p><span style='font-weight: 500'>Important: </span>Based on taking these actions, the best day to check for score increases is the 28th of the month. Allow up to three months to achieve full results.<br />These recommendations are only estimates.  They do not take into consideration future factors like balance changes and late payments.</p>
                 </div>
