--- a/array-score-sight.html
+++ b/array-score-sight.html
@@ -129,29 +129,30 @@
                             <h5 class='m2-sc1-item'>Action</h5>
                             <h5 class='m2-sc1-item'>Account</h5>
                         </div>
-                        <!-- group -->
+                        <!-- group menu-2-subcontainer-2 -->
                         <div id='menu-2-subcontainer-2'>
                             <h5 class='m2-sc2-item'>TransUnion</h5>
                             <h5 class='m2-sc2-item'>Equifax</h5>
                             <h5 class='m2-sc2-item'>Experian</h5>
                         </div>
                     </div>
-                    <!-- PAYMENTS CONTAINER -->
+                    <!-- PAYMENT CONTAINER -->
                     <div class='payment-container'>
-                        <!-- group as class='pc-subcontainer'-->
+                        <!-- subcontainer 1-->
                         <div class='pc-subcontainer-1'>
-                            <div class='payment-type pc-padding'>
+                            <div class='payment-type'>
                                 <img class='card-icon' src='./assets/alerts-icon.png' />
                                 <a class='payment-title'>Make an On-time Payment</a>
                             </div>
-                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div class='account'>BK OF AMER #456 9356 ***</div>
                             <div>
-                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                                <p class='result-desc'>Making a payment on this account could result in a 3 point score increase.</p>
                             </div>
                         </div>
-                        <!-- group -->
+                        <!-- end subcontainer 1 -->
+                        <!-- subcontainer 2 -->
                         <div class='pc-subcontainer-2'>
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>TransUnion</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg' />
@@ -159,7 +160,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>Equifax</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
@@ -167,7 +168,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>Experian</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
@@ -179,22 +180,23 @@
                     </div> 
                     <!-- end payment-container -->
 
-                    <!-- PAYMENTS CONTAINER -->
+                    <!-- PAYMENT CONTAINER -->
                     <div class='payment-container'>
-                        <!-- group as class='pc-subcontainer'-->
+                        <!-- subcontainer 1-->
                         <div class='pc-subcontainer-1'>
-                            <div class='payment-type pc-padding'>
+                            <div class='payment-type'>
                                 <img class='card-icon' src='./assets/alerts-icon.png' />
                                 <a class='payment-title'>Make an On-time Payment</a>
                             </div>
-                            <div class='account pc-padding'>JPMCB CARD #736 4625 ****</div>
+                            <div class='account'>JPMCB CARD #736 4625 ****</div>
                             <div>
-                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                                <p class='result-desc'>Making a payment on this account could result in a 3 point score increase.</p>
                             </div>
                         </div>
-                        <!-- group -->
+                        <!-- end subcontainer 1 -->
+                        <!-- subcontainer 2 -->
                         <div class='pc-subcontainer-2'>
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>TransUnion</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg' />
@@ -202,7 +204,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>Equifax</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
@@ -210,7 +212,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>Experian</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
@@ -222,22 +224,23 @@
                     </div> 
                     <!-- end payment-container -->
 
-                    <!-- PAYMENTS CONTAINER -->
+                    <!-- PAYMENT CONTAINER -->
                     <div class='payment-container'>
-                        <!-- group as class='pc-subcontainer'-->
+                        <!-- subcontainer 1-->
                         <div class='pc-subcontainer-1'>
-                            <div class='payment-type pc-padding'>
+                            <div class='payment-type'>
                                 <img class='gauge-icon' src='./assets/simulator-icon.svg' />
                                 <a class='payment-title'>Increase Credit Limit</a>
                             </div>
-                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div class='account'>BK OF AMER #456 9356 ***</div>
                             <div>
-                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                                <p class='result-desc'>Making a payment on this account could result in a 3 point score increase.</p>
                             </div>
                         </div>
-                        <!-- group -->
+                        <!-- end subcontainer 1 -->
+                        <!-- subcontainer 2 -->
                         <div class='pc-subcontainer-2'>
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>TransUnion</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg' />
@@ -245,7 +248,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>Equifax</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
@@ -253,7 +256,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>Experian</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
@@ -265,22 +268,23 @@
                     </div> 
                     <!-- end payment-container -->
 
-                    <!-- PAYMENTS CONTAINER -->
+                    <!-- PAYMENT CONTAINER -->
                     <div class='payment-container bottom-payment-container'>
-                        <!-- group as class='pc-subcontainer'-->
+                        <!-- subcontainer 1-->
                         <div class='pc-subcontainer-1'>
-                            <div class='payment-type pc-padding'>
+                            <div class='payment-type'>
                                 <img class='cash-icon' src='./assets/cashicon.svg' />
                                 <a class='payment-title'>Pay down debt</a>
                             </div>
-                            <div class='account pc-padding'>BK OF AMER #456 9356 ***</div>
+                            <div class='account'>BK OF AMER #456 9356 ***</div>
                             <div>
-                                <p class='result-desc pc-padding'>Making a payment on this account could result in a 3 point score increase.</p>
+                                <p class='result-desc'>Making a payment on this account could result in a 3 point score increase.</p>
                             </div>
                         </div>
-                        <!-- group -->
+                        <!-- end subcontainer 1 -->
+                        <!-- subcontainer 2 -->
                         <div class='pc-subcontainer-2'>
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>TransUnion</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg' />
@@ -288,7 +292,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>Equifax</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
@@ -296,7 +300,7 @@
                                 </div>
                             </div>
 
-                            <div class='bureau pc-padding'>
+                            <div class='bureau'>
                                 <div class='payments-bureau-name'>Experian</div>
                                 <div class='flex-row'>
                                     <img class='pc-tricon' src='./assets/triangle-copy-7.svg'  />
